--- a/views/display.ejs
+++ b/views/display.ejs
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task View</title>
-    <link rel="stylesheet" href="/public/index.css">
+    <link rel="stylesheet" href="/index.css">
 </head>
 <body>
-    <h1>This is your task</h1><br>
+    <h1 class="header">This is your task</h1><br>
     <div class="content-box">
         <div class="task-box">
             <h3><%= task.title %></h3>
             <p><%= task.description %></p>
         </div>
     </div>
+    <button class="button-props" id="go-back"><a href="http://localhost:8080/tasks/">Go Back</a></button>
 </body>
 </html>
