--- a/views/new-task.ejs
+++ b/views/new-task.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create New Task</title>
+    <link rel="stylesheet" href="/index.css">
 </head>
 <body>
     <form method="post" action="/tasks">
@@ -11,7 +12,7 @@
         <input type="text" name="title" placeholder="Enter Title">
         <h3>Description: </h3>
         <textarea name="description" placeholder="Enter Description"></textarea><br><br>
-        <button>Submit</button>
+        <button class="button-props">Submit</button>
     </form>
 </body>
 </html>
